Update and rename 2026-01-14.ipynb to 2026-01-14.md

--- a/_posts/2026-01-14.md
+++ b/_posts/2026-01-14.md
@@ -1,3 +1,14 @@
+---
+layout: single
+title:  "파이썬 객체지향 정리"
+---
+
+# 깃허브 블로그 첫 글
+
+생성 AI 과정 exp 데일리 미션 (2026-01-12)
+
+
+
 {
   "nbformat": 4,
   "nbformat_minor": 0,
