Fix typos and formatting in sixth.md

--- a/_posts/2026-01-20-sixth.md
+++ b/_posts/2026-01-20-sixth.md
@@ -128,7 +128,7 @@ FOUC 방지를 위해 `<head>` 태그 내에 초기화 스크립트를 삽입하
 ```
 
 ### Step 3: UI 컴포넌트 추가
-HTML 구조에 버튼을 추가합니다.
+HTML 구조에 버튼을 추가합니다다.
 ```html
 <button id="theme-toggle" aria-label="Toggle Dark Mode">
   <svg class="sun-icon">...</svg>
@@ -221,7 +221,7 @@ Scroll 과정: https://the-internet.herokuapp.com/infinite_scroll
 
 ### 📊 기능별 매핑 가이드
 
-테스트 전용 사이트인 [The Internet](https://the-internet.herokuapp.com/)을 대상으로 한 기능 검증 매핑입니다.
+테스트 전용 사이트인 [The Internet](https://the-internet.herokuapp.com/)을 대상으로 한 기능 검증 매핑.
 
 | 테스트 기능 | 실전 프롬프트 명령 예시 | 에이전트 내부 동작 및 메커니즘 |
 | :--- | :--- | :--- |
@@ -248,7 +248,7 @@ Scroll 과정: https://the-internet.herokuapp.com/infinite_scroll
 # 3. Planning 모드 vs Fast 모드 비교
 
 
-**테스트 시나리오"**
+**테스트 시나리오**
 
 짧은 코드를 두 개의 에이전트에 실행해보기
 
