--- a/_posts/2026-01-29-seventh.md
+++ b/_posts/2026-01-29-seventh.md
@@ -1,3 +1,13 @@
+---
+layout: single
+title:  "26.01.29 데일리미션: "
+---
+
+
+
+
+
+
 ```python
 from google.colab import drive
 drive.mount('/content/drive')
