Update title for daily mission post

--- a/_posts/2026-01-29-seventh.md
+++ b/_posts/2026-01-29-seventh.md
@@ -1,9 +1,9 @@
 ---
 layout: single
-title:  "26.01.29 데일리미션: "
+title:  "26.01.29 데일리미션: 데이터 시각화"
 ---
 
-
+# drop_duplicates, concat, drop/truncate, copy, pop, insert, +)label 변경
 
 
 
