--- a/_posts/2026-01-30-eight.md
+++ b/_posts/2026-01-30-eight.md
@@ -1,3 +1,13 @@
+---
+layout: single
+title:  "26.01.29 데일리미션: 데이터 시각화"
+---
+
+# 지수가중함수 (EWM), 그룹화 계산(Groupby) 파라미터 활용
+
+
+
+
 ```python
 from google.colab import drive
 drive.mount('/content/drive')
