--- a/_posts/2026-01-31-ten.md
+++ b/_posts/2026-01-31-ten.md
@@ -1,3 +1,16 @@
+
+---
+layout: single
+title:  "26.01.26. 데일리미션: 데이터 시각화 실습 part"
+---
+
+
+# 26.01.26 데일리미션
+
+
+
+
+
 ```python
 from google.colab import drive
 drive.mount('/content/drive')
