--- a/_posts/2026-01-31-nine.md
+++ b/_posts/2026-01-31-nine.md
@@ -3,7 +3,7 @@ layout: single
 title:  "26.01.26. 데일리미션: 데이터 시각화 개념정리 part"
 ---
 
-# 26.01.26 줌 강의 개념정리(~기간이동 계산 (rolling))
+# 줌 강의 개념정리(~기간이동 계산 (rolling))
 
 
 ```python
