--- a/_posts/2026-01-30-twelve.md
+++ b/_posts/2026-01-30-twelve.md
@@ -1,3 +1,14 @@
+--- 
+layout: single
+published: true
+title: "26.01.28. 데일리미션: 데이터 시각화 실습(titanic)"
+---
+
+
+# 객체병합(merge), 인덱스기준 병합 (join), 함수 이용 열/행 단위 결합 (combine), 정렬 후 추출, 값 기준 / 인덱스 기준 정렬 
+
+
+
 ```python
 from google.colab import drive
 drive.mount('/content/drive')
@@ -8,7 +19,7 @@ drive.mount('/content/drive')
 !jupyter nbconvert --to markdown "/content/drive/MyDrive/구름 생성AI/구름exp/26.01.28 데일리미션.ipynb"
 ```
 
-#**데이터 시각화: 타이타닉 데이터**
+# **데이터 시각화: 타이타닉 데이터**
 
 
 ```python
@@ -18,7 +29,7 @@ import pandas as pd
 import numpy as np
 ```
 
-#**Kaggle Dataset**
+# **Kaggle Dataset**
 - This is the original data from Titanic competition plus some changes that I applied to it to be better suited for binary logistic regression:
 
 - Merged the train and test data.
@@ -74,7 +85,7 @@ df1 = df[['Passengerid', 'Age', 'Sex']].iloc[:10].copy()
 df2 = df[['Passengerid', 'Pclass', 'Fare', '2urvived']].iloc[:10].copy()
 ```
 
-#**1. 객체병합(merge)에 필요한 메서드 활용하기**
+# **1. 객체병합(merge)에 필요한 메서드 활용하기**
 
 
 ```python
@@ -151,7 +162,7 @@ print("================== 2. 인덱스기준 병합 (join)================== \n"
     5                35.0    0       35.0   8.0500
 
 
-#**3. 함수 이용 열/행 단위 결합 (combine, combine_first) 메서드 활용**
+# **3. 함수 이용 열/행 단위 결합 (combine, combine_first) 메서드 활용**
 
 
 ```python
@@ -206,7 +217,7 @@ print("======== 4. 정렬 후 추출 메서드 활용(top5) ======== \n", top_5[
     27             28  263.0000
 
 
-#**5. 값 기준 / 인덱스 기준 정렬 메서드 활용하기**
+# **5. 값 기준 / 인덱스 기준 정렬 메서드 활용하기**
 
 
 ```python
