--- a/_posts/2026-02-01-13th.md
+++ b/_posts/2026-02-01-13th.md
@@ -1,3 +1,16 @@
+---
+layout: single
+published: true
+title: "데일리미션: 파이썬 1단계"
+---
+
+# 파이썬 1단계 입문(~ 리스트,딕셔너리)
+
+
+
+
+
+
 ```python
 from google.colab import drive
 drive.mount('/content/drive')
