Update and rename 26.02.04 데일리미션.md to 2026-02-04-16th.md

--- a/_posts/2026-02-04-16th.md
+++ b/_posts/2026-02-04-16th.md
@@ -1,3 +1,13 @@
+---
+layout: single
+published: true
+title: "26.02.04. 데일리미션: plotly (~ Plotly 인터랙티브)"
+---
+
+# Plotly 버튼을 생성하고 튜닝하기, Plotly 드롭다운을 생성하고 튜닝하기, Plotly Statistics Chart
+
+
+
 ```python
 from google.colab import drive
 drive.mount('/content/drive')
