Update and rename 26.02.07 데일리미션.md to 2026-02-06-18th.md

--- a/_posts/2026-02-06-18th.md
+++ b/_posts/2026-02-06-18th.md
@@ -1,3 +1,13 @@
+---
+layout: single
+published: true
+title: "26.02.06. 데일리미션: streamlit 다루기"
+---
+
+# 다양한 기능을 사용해서 streamlit 토이프로젝트 만들기
+
+
+
 ```python
 from google.colab import drive
 drive.mount('/content/drive')
@@ -11,7 +21,7 @@ drive.mount('/content/drive')
 !jupyter nbconvert --to markdown "/content/drive/MyDrive/구름 생성AI/구름exp/데일리미션/26.02.07 데일리미션.ipynb"
 ```
 
-#**Streamlit 개발환경 구축**
+# **Streamlit 개발환경 구축**
 - conda가 안 돼서... anaconda 설치해서 anaconda prompt 이용함
 
 
