Update and rename 26.02.23 캐글 튜토리얼.md to 2026-02-23-22th.md

--- a/_posts/2026-02-23-22th.md
+++ b/_posts/2026-02-23-22th.md
@@ -1,3 +1,16 @@
+---
+layout: single
+published: true
+title: "26.02.23. 팀 스터디: Kaggle Tutorial"
+---
+
+# 캐글 튜토리얼
+
+
+
+
+
+
 ```python
 from google.colab import drive
 drive.mount('/content/drive')
