Update title for QGIS vector data post

--- a/_posts/2026-02-26-25th.md
+++ b/_posts/2026-02-26-25th.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 published: true
-title: "QGIS 벡터 데이터 로드 및 속성 테이블 활용 실습"
+title: "26.02.25. 데일리미션: QGIS 벡터 데이터 로드 및 속성 테이블 활용 실습"
 date: 2026-02-27
 tags: [GIS, QGIS, SpatialData, SHP, GeoPackage]
 ---
