Update Neo4j post with image and source link

--- a/_posts/2026-02-28-26th.md
+++ b/_posts/2026-02-28-26th.md
@@ -8,7 +8,9 @@ tags: [Database, Neo4j, GraphDB, Cypher, NoSQL]
 
 # Neo4j 그래프 데이터베이스
 
+<img width="500" height="265" alt="그림3" src="https://github.com/user-attachments/assets/db5cde95-2f96-44c9-b7a0-8381bf830d53" />
 
+출처: https://wikidocs.net/book/3724
 
 ---
 
